test/errors/default_values_error/zs/field_initializer_error.zs
package field_initializer_error;

struct FieldInitializer
{
    int8    field;
    int8    fieldInitializer = field;
};
